# hue-dynamics

./: CMakeLists.txt  README.md  build.sh
include/: Config.h  Dynamics.h  Particle.h  ThreadPool.h  Util.h
src/: Config.cpp  Dynamics.cpp  Particle.cpp  ThreadPool.cpp  Util.cpp  main.cpp
